--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -63,30 +63,31 @@
             <h2>Forecast for the next Five days</h2>
             <div id="five-days">
                 <div class="forecast" >
-                    <div id="01" class="iddia">lun.</div> 
-                    <img id="imagesrc1"> &nbsp; <img src="" alt="" class="icon" id="icon1">
-                    <div><span id="idday1">30</span> ºF</div>
+                    <div id="01" class="dia">lun.</div> 
+                    <img src="" alt="" class="icon" id="icon">
+                    <div><span id="day">30</span> ºF</div>
                 </div>
                 <div class="forecast">
                     <div id="02" class="dia">mar.</div>
-                    <img src="" alt="" class="icon" id="icon2">
-                    <div><span id="day2">30</span> ºF</div></div>
+                    <img src="" alt="" class="icon" id="icon">
+                    <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
                     <div id="03" class="dia">mie.</div>
-                    <img src="" alt="" class="icon" id="icon3">
-                    <div><span id="day3">30</span> ºF</div></div>
+                    <img src="" alt="" class="icon" id="icon">
+                    <div><span id="day">30</span> ºF</div></div>
                 <div class="forecast" >
                     <div id="04" class="dia">xxx.</div>
-                    <img src="" alt="" class="icon" id="icon4">
-                    <div><span id="day4">30</span> ºF</div></div>
+                    <img src="" alt="" class="icon" id="icon">
+                    <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
                     <div id="05" class="dia">xxx.</div>
-                    <img src="" alt="" class="icon" id="icon5">
-                    <div><span id="day5">30</span> ºF</div></div>
+                    <img src="" alt="" class="icon" id="icon">
+                    <div><span id="day">30</span> ºF</div></div>
             </div>
             <script src="js/forecast.js"></script>
+            <script>getForecast();</script>
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
