--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -61,33 +61,35 @@
             
 
             <h2>Forecast for the next Five days</h2>
-            <div id="five-days">
+            <div id="five-days"><script src="js/forecast.js"></script>
+                <script>getForecast();</script>
+                <script>dayName(fecha)</script>
                 <div class="forecast" >
-                    <div id="01" class="dia">lun.</div> 
+                    <div id="fecha" class="dia"></div> 
                     <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div>
+                    <div><span id="temp">30</span> ºF</div>
                 </div>
                 <div class="forecast">
-                    <div id="02" class="dia">mar.</div>
+                    <div id="02" class="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
-                    <div id="03" class="dia">mie.</div>
+                    <div id="03" class="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
                 <div class="forecast" >
-                    <div id="04" class="dia">xxx.</div>
+                    <div id="04" class="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
-                    <div id="05" class="dia">xxx.</div>
+                    <div id="05" class="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
             </div>
-            <script src="js/forecast.js"></script>
-            <script>getForecast();</script>
+            
+
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
