--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -61,11 +61,12 @@
             
 
             <h2>Forecast for the next Five days</h2>
-            <div id="five-days"><script src="js/forecast.js"></script>
+            <div id="five-days">
+                <script src="js/forecast.js"></script>
                 <script>getForecast();</script>
                 <script>dayName(fecha)</script>
                 <div class="forecast" >
-                    <div id="fecha" class="dia"></div> 
+                    <div id="01" class="dia"></div> 
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="temp">30</span> ºF</div>
                 </div>
