--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -63,29 +63,28 @@
             <h2>Forecast for the next Five days</h2>
             <div id="five-days">
                 <script src="js/forecast.js"></script>
-                <script>getForecast();</script>
-                <script>dayName(fecha)</script>
+                <script>getForecast()</script>
                 <div class="forecast" >
-                    <div id="01" class="dia"></div> 
+                    <div id="01" id="dia"></div> 
                     <img src="" alt="" class="icon" id="icon">
-                    <div><span id="temp">30</span> ºF</div>
+                    <div><span id="day">30</span> ºF</div>
                 </div>
                 <div class="forecast">
-                    <div id="02" class="dia"></div>
+                    <div id="02" id="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
-                    <div id="03" class="dia"></div>
+                    <div id="03" id="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
                 <div class="forecast" >
-                    <div id="04" class="dia"></div>
+                    <div id="04" id="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
 
                 <div class="forecast" >
-                    <div id="05" class="dia"></div>
+                    <div id="05" id="dia"></div>
                     <img src="" alt="" class="icon" id="icon">
                     <div><span id="day">30</span> ºF</div></div>
             </div>
