--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -65,9 +65,9 @@
                 <script src="js/forecast.js"></script>
                 <script>getForecast()</script>
                 <div class="forecast" >
-                    <div id="01" id="dia"></div> 
-                    <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div>
+                    <div id="01" id="day"></div> 
+                    <img id="imagesrc"> <img src="" alt="" class="icon" id="icon">
+                    <div><span id="temp">30</span> ºF</div>
                 </div>
                 <div class="forecast">
                     <div id="02" id="dia"></div>
