--- a/Lesson 10/preston1.html
+++ b/Lesson 10/preston1.html
@@ -62,32 +62,13 @@
 
             <h2>Forecast for the next Five days</h2>
             <div id="five-days">
-                <script src="js/forecast.js"></script>
-                <script>getForecast()</script>
-                <div class="forecast" >
-                    <div id="01" id="day"></div> 
-                    <img id="imagesrc"> <img src="" alt="" class="icon" id="icon">
-                    <div><span id="temp">30</span> ºF</div>
-                </div>
-                <div class="forecast">
-                    <div id="02" id="dia"></div>
-                    <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div></div>
-
-                <div class="forecast" >
-                    <div id="03" id="dia"></div>
-                    <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div></div>
-                <div class="forecast" >
-                    <div id="04" id="dia"></div>
-                    <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div></div>
-
-                <div class="forecast" >
-                    <div id="05" id="dia"></div>
-                    <img src="" alt="" class="icon" id="icon">
-                    <div><span id="day">30</span> ºF</div></div>
+                <p><span id="dayofweek1"></span>: <span id="forecast1"></span>&deg; F <img id="imagesrc1"> &nbsp; <img src="" alt="" id="icon1"></p>
+                <p><span id="dayofweek2"></span>: <span id="forecast2"></span>&deg; F <img id="imagesrc2"> &nbsp; <img src="" alt="" id="icon2"> </p>
+                <p><span id="dayofweek3"></span>: <span id="forecast3"></span>&deg; F <img id="imagesrc3"> &nbsp; <img src="" alt="" id="icon3"></p>
+                <p><span id="dayofweek4"></span>: <span id="forecast4"></span>&deg; F <img id="imagesrc4"> &nbsp; <img src="" alt="" id="icon4"></p>
+                <p><span id="dayofweek5"></span>: <span id="forecast5"></span>&deg; F <img id="imagesrc5"> &nbsp; <img src="" alt="" id="icon5"></p>
             </div>
+               <script src="js/forecast.js"></script>
             
 
 
