--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <li>LESSON 09:<a href="https://midael1975.github.io/Lesson%209/prophets.html" target="_blank">Prophets</a></li>
       <li>LESSON 09:<a href="https://midael1975.github.io/Lesson%209/home-wireframe.html" target="_blank">Home Wireframe</a></li>
       <li>LESSON 09:<a href="https://midael1975.github.io/Lesson%209/homepage.html" target="_blank">Weather Site Homepage</a></li>
-      <li>LESSON 10:<a href="index.html">Preston Weather Api</a></li>
+      <li>LESSON 10:<a href="https://midael1975.github.io/Lesson%2010/api-test.html" target="_blank">Api Test</a></li>
+      <li>LESSON 10:<a href="https://midael1975.github.io/Lesson%2010/preston-10.html" target="_blank">Preston Weather Api</a></li>
       <li>LESSON 11:<a href="index.html">Weather site</a></li>
       <li>LESSON 12:<a href="index.html">Final Project</a></li>
       <li>LESSON 13:<a href="index.html">Final Project II</a></li>
