--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -26,7 +26,7 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="https://midael1975.github.io/Lesson%209/homepage.html" target="_blank">Home</a></li>
+              <li class="active"><a href="https://midael1975.github.io/Lesson%209/homepage.html">Home</a></li>
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
