--- a/Lesson 7/gallery.html
+++ b/Lesson 7/gallery.html
@@ -26,12 +26,12 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="lazyload.html" >Home</a></li>
-              <li><a href="">Preston</a></li>
+              <li class="active"><a href="https://midael1975.github.io/Lesson%209/homepage.html" >Home</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
-              <li><a href="">Storm Center</a></li>
-              <li><a href="">Gallery</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
             </ul>
         </nav>
 
