--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -27,11 +27,11 @@
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
               <li><a href="https://midael1975.github.io/Lesson%209/homepage.html" target="_blank">Home</a></li>
-              <li><a href="">Preston</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
               <li class="active"><a href="https://midael1975.github.io/Lesson%208/stormcenter.html" target="_blank">Storm Center</a></li>
-              <li><a href="">Gallery</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
             </ul>
         </nav>
 
