--- a/Lesson 11/sodaspring.html
+++ b/Lesson 11/sodaspring.html
@@ -39,10 +39,10 @@
             <h2 id="ciudad">Preston, Idaho</h2>
             <div id="herosum">
                 <picture id="hero">
-                    <source srcset="images1/sodaspringsmedium.jpg" media="(min-width: 520px) and 
+                    <source srcset="images/sodaspringsmedium.jpg" media="(min-width: 520px) and 
                     (max-width: 1023px)">
-                       <source srcset="images1/sodaspringlarge.jpg" media="(min-width: 1024px)">
-                    <img src="images1/sodaspringsmall.jpg" alt="" id="primero">
+                       <source srcset="images/sodaspringlarge.jpg" media="(min-width: 1024px)">
+                    <img src="images/sodaspringsmall.jpg" alt="" id="primero">
                 </picture>
 
 
