--- a/Lesson 11/Lesson 10/sodaspring.html
+++ b/Lesson 11/Lesson 10/sodaspring.html
@@ -28,7 +28,7 @@
             <ul id="mostrar" class="hide">
               <li><a href="https://midael1975.github.io/Lesson%209/homepage.html">Home</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
-              <li class="active"><a href="https://midael1975.github.io/Lesson%2011/sodaspring.html">Soda Springs</a></li>
+              <li class="active"><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
               <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
               <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
@@ -36,7 +36,7 @@
         </nav>
         
         <main>
-            <h2 id="ciudad">Preston, Idaho</h2>
+            <h2 id="ciudad">Soda Spring, Idaho</h2>
             <div id="herosum">
                 <picture id="hero">
                     <source srcset="images/sodaspringsmedium.jpg" media="(min-width: 520px) and 
