--- a/Lesson 11/Lesson 10/fishhaven.html
+++ b/Lesson 11/Lesson 10/fishhaven.html
@@ -165,7 +165,7 @@
              WebFont.load({google:{families: ['Roboto', 'open']}});
 
          </script>
-  <script src="js/sprinnfiel.js"></script>
+  <script src="js/fishhaven.js"></script>
     </body>
 
 </html>
