--- a/Lesson 10/preston.html
+++ b/Lesson 10/preston.html
@@ -28,7 +28,7 @@
             <ul id="mostrar" class="hide">
               <li><a href="https://midael1975.github.io/Lesson%209/homepage.html">Home</a></li>
               <li class="active"><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
-              <li><a href="">Soda Springs</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
               <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
               <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
