--- a/Lesson 11/Lesson 10/fishhaven.html
+++ b/Lesson 11/Lesson 10/fishhaven.html
@@ -42,7 +42,7 @@
                     <source srcset="images/fishhavenmedium.jpg" media="(min-width: 520px) and 
                     (max-width: 1023px)">
                        <source srcset="images/fishhavenlarge.jpg" media="(min-width: 1024px)">
-                    <img src="images/fishhavensmall.jpg" alt="" id="primero">
+                    <img src="images/fishhavensmall.jpg" alt="Fish Haven" id="primero">
                 </picture>
 
 
