--- a/Lesson 10/sodaspring.html
+++ b/Lesson 10/sodaspring.html
@@ -36,7 +36,7 @@
         </nav>
         
         <main>
-            <h2 id="ciudad">Preston, Idaho</h2>
+            <h2 id="ciudad">Soda Spring, Idaho</h2>
             <div id="herosum">
                 <picture id="hero">
                     <source srcset="images/sodaspringsmedium.jpg" media="(min-width: 520px) and 
