--- a/Lesson 11/index.html
+++ b/Lesson 11/index.html
@@ -30,8 +30,8 @@
               <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/preston.html">Preston</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/sodaspring.html">Soda Springs</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/fishhaven.html">Fish Haven</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%208/stormcenter.html">Storm Center</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%207/gallery.html">Gallery</a></li>
             </ul>
         </nav>
 
