--- a/Lesson 7/gallery.html
+++ b/Lesson 7/gallery.html
@@ -29,7 +29,7 @@
               <li><a href="https://midael1975.github.io/Lesson%209/homepage.html" >Home</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
-              <li><a href="">Fish Haven</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/fishhaven.html">Fish Haven</a></li>
               <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
               <li class="active"><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
             </ul>
