--- a/Lesson 10/preston.html
+++ b/Lesson 10/preston.html
@@ -58,7 +58,8 @@
             </div>
 
             <div class="events"><script src="js/event.js"></script>
-            
+            <h2>Upcoming Events</h2>
+            <p>__________________</p>
             </div>
             
 
