--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -55,6 +55,9 @@
                 <p>Humidity:<span id="humidity"></span>%</p>
                
                 </section>
+                <div class="events"><script src="js/events2.js"></script>
+                    <h3>Upcoming Events</h3>
+                    </div>
             </div>
             
 
