--- a/Lesson 10/sodaspring.html
+++ b/Lesson 10/sodaspring.html
@@ -155,12 +155,12 @@
             <div id="Information">
                 <h2>Contact Information</h2>
                 <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
+                <p>Website: <a id="web" href="https://www.sodaspringsid.com/" target = "_blank">https://www.prestonidaho.net/</a></p>
                 <img src="images/Instagram.png" width="35" alt="icon instagram">
                 <img src="images/twitter1.png" width="35" alt="icon twitter">
                 <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
-            <img id="contacto" src="images/mapa.png" alt="mapa">
+            <img id="contacto" src="images/mapasoda.jpg" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
