--- a/Lesson 10/sodaspring.html
+++ b/Lesson 10/sodaspring.html
@@ -155,7 +155,12 @@
                     explaining this phenomenon.</p>
                 <p id="cinco"class="parrafo">Soda Springs is also the location of one of the Ground 
                     Observer Corps sites.</p>  
-                    <img id="articulo"  src="images/Ciudad Preston.jpg" alt="City image">
+                    <picture id="articulo">
+                        <source srcset="images/Sodacity.jpg" media="(min-width: 520px) and 
+                        (max-width: 1023px)">
+                           <source srcset="images/Sodalarge.jpg" media="(min-width: 1024px)">
+                        <img src="images/Sodalarge.jpg" alt="" id="primero">
+                    </picture>
             </div>
             
   
