--- a/Lesson 10/sodaspring.html
+++ b/Lesson 10/sodaspring.html
@@ -173,7 +173,7 @@
                 <h2>Contact Information</h2>
                 <p>Phone Number: +1 208-547-2600</p>
                 <p>Website: <a id="web" href="https://www.sodaspringsid.com/" target = "_blank">https://www.sodaspringsid.com/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
+                <a href="https://www.instagram.com/explore/locations/221838718/united-states/soda-springs-idaho/?hl=en"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
                 <a href="https://twitter.com/skisodasprings?lang=en" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
                 <a href="https://www.facebook.com/sodaspringsidaho/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
