--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -156,11 +156,11 @@
         <footer>
             <div id="Information">
                 <h2>Contact Information</h2>
-                <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
+                <p>Phone Number: (800) 448-2327</p>
+                <p>Website: <a id="web" href="https://bearlake.org/loc/fish-haven/" target = "_blank">https://bearlake.org/loc/fish-haven/</a></p>
                 <img src="images/Instagram.png" width="35" alt="icon instagram">
                 <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <a href="https://www.facebook.com/BearLakeValleyCVB/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
             <img id="contacto" src="images/mapafish.jpg" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
