--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -158,8 +158,8 @@
                 <h2>Contact Information</h2>
                 <p>Phone Number: (800) 448-2327</p>
                 <p>Website: <a id="web" href="https://bearlake.org/loc/fish-haven/" target = "_blank">https://bearlake.org/loc/fish-haven/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
+                <a href="https://www.instagram.com/visitbearlake/" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/bearlakevalley" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
                 <a href="https://www.facebook.com/BearLakeValleyCVB/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
             <img id="contacto" src="images/mapafish.jpg" alt="mapa">
