--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -143,10 +143,25 @@
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
-                <p id="dos" class="parrafo">The city of Preston, Idaho was founded in 1900, with a population of 5,354, sits at an elevation of 4,718ft, and has many options for the family to enjoy.</p>
-                <p id="tres"class="parrafo">Spring brings golfing at our 18-hole course, floating and kayaking down the beautiful Bear River, as well as fishing, boating, water-skiing or just camping at our 10 reservoirs. There are three swimming resorts close by and also a new swimming pool in town.</p>
-                <p id="cuatro"class="parrafo">Winter brings the best snow and the most beautiful winter scenery. Snowmobiling and cross country skiing is great. You can travel down Mink Creek, Cub River, and even Logan Canyon and see the most beautiful winter wonderland ever, ending up at Bloomington or Bear Lake.</p>
-                <p id="cinco"class="parrafo">Preston is a vacationer’s dream. There’s always something to do.</p>  
+                <p id="dos" class="parrafo">Fish Haven,[1] originally named Rush Creek, is an 
+                    unincorporated community along the shores of Bear Lake in Bear Lake County, 
+                    Idaho, United States. It is 4 km (2.5 miles) north of the Utah border.</p>
+                <p id="tres"class="parrafo">An unincorporated area is a region not governed by 
+                    a local municipal corporation. Similarly, an unincorporated community is a 
+                    settlement not governed by its own local municipal corporation, but is 
+                    administered as part of larger administrative divisions, such as a 
+                    township, parish, borough, county, city, canton, state, province, 
+                    or country. Occasionally, municipalities dissolve or disincorporate, 
+                    which may happen if they become fiscally insolvent, and services become 
+                    the responsibility of a higher administration. Widespread unincorporated 
+                    communities and areas are a distinguishing feature of the United States 
+                    and Canada.</p>
+                <p id="cuatro"class="parrafo">The first settlement at Fish Haven was made in 
+                    1864.[2] A post office called Fish Haven was established in 1867, and 
+                    remained in operation until 1962.[3] The community was so named because 
+                    nearby Bear Lake is a favorite fishing spot.</p>
+                <p id="cinco"class="parrafo">The town of Fish Haven is excellent for fishing 
+                    and enjoying the quiet of outdoor activities.</p>  
                     <img id="articulo"  src="images/cityfish.jpg" alt="City image">
             </div>
             
