--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -143,7 +143,7 @@
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
-                <p id="dos" class="parrafo">Fish Haven,[1] originally named Rush Creek, is an 
+                <p id="dos" class="parrafo">Fish Haven, originally named Rush Creek, is an 
                     unincorporated community along the shores of Bear Lake in Bear Lake County, 
                     Idaho, United States. It is 4 km (2.5 miles) north of the Utah border.</p>
                 <p id="tres"class="parrafo">An unincorporated area is a region not governed by 
@@ -157,8 +157,8 @@
                     communities and areas are a distinguishing feature of the United States 
                     and Canada.</p>
                 <p id="cuatro"class="parrafo">The first settlement at Fish Haven was made in 
-                    1864.[2] A post office called Fish Haven was established in 1867, and 
-                    remained in operation until 1962.[3] The community was so named because 
+                    1864. A post office called Fish Haven was established in 1867, and 
+                    remained in operation until 1962. The community was so named because 
                     nearby Bear Lake is a favorite fishing spot.</p>
                 <p id="cinco"class="parrafo">The town of Fish Haven is excellent for fishing 
                     and enjoying the quiet of outdoor activities.</p>  
