--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -143,10 +143,10 @@
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
-                <p id="dos" class="parrafo">Fish Haven, originally named Rush Creek, is an 
+                <p id="twop" class="parrafo">Fish Haven, originally named Rush Creek, is an 
                     unincorporated community along the shores of Bear Lake in Bear Lake County, 
                     Idaho, United States. It is 4 km (2.5 miles) north of the Utah border.</p>
-                <p id="tres"class="parrafo">An unincorporated area is a region not governed by 
+                <p id="threep"class="parrafo">An unincorporated area is a region not governed by 
                     a local municipal corporation. Similarly, an unincorporated community is a 
                     settlement not governed by its own local municipal corporation, but is 
                     administered as part of larger administrative divisions, such as a 
