--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -151,11 +151,7 @@
                     settlement not governed by its own local municipal corporation, but is 
                     administered as part of larger administrative divisions, such as a 
                     township, parish, borough, county, city, canton, state, province, 
-                    or country. Occasionally, municipalities dissolve or disincorporate, 
-                    which may happen if they become fiscally insolvent, and services become 
-                    the responsibility of a higher administration. Widespread unincorporated 
-                    communities and areas are a distinguishing feature of the United States 
-                    and Canada.</p>
+                    or country.</p>
                 <p id="cuatro"class="parrafo">The first settlement at Fish Haven was made in 
                     1864. A post office called Fish Haven was established in 1867, and 
                     remained in operation until 1962. The community was so named because 
