--- a/Lesson 10/fishhaven.html
+++ b/Lesson 10/fishhaven.html
@@ -145,13 +145,11 @@
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
                 <p id="twop" class="parrafo">Fish Haven, originally named Rush Creek, is an 
                     unincorporated community along the shores of Bear Lake in Bear Lake County, 
-                    Idaho, United States. It is 4 km (2.5 miles) north of the Utah border.</p>
+                    Idaho, United States.</p>
                 <p id="threep"class="parrafo">An unincorporated area is a region not governed by 
                     a local municipal corporation. Similarly, an unincorporated community is a 
                     settlement not governed by its own local municipal corporation, but is 
-                    administered as part of larger administrative divisions, such as a 
-                    township, parish, borough, county, city, canton, state, province, 
-                    or country.</p>
+                    administered as part of larger administrative divisions.</p>
                 <p id="cuatro"class="parrafo">The first settlement at Fish Haven was made in 
                     1864. A post office called Fish Haven was established in 1867, and 
                     remained in operation until 1962. The community was so named because 
