--- a/Lesson 10/preston.html
+++ b/Lesson 10/preston.html
@@ -157,10 +157,10 @@
         <footer>
             <div id="Information">
                 <h2>Contact Information</h2>
-                <p>Phone Number: 04145560383</p>
+                <p>Phone Number: (208) 852-1817</p>
                 <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
+                <a href="https://www.instagram.com/explore/locations/234712761/preston-idaho/?hl=en"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/prestonidaho"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
                 <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
             <img id="contacto" src="images/mapa.png" alt="mapa">
