--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -37,17 +37,18 @@
 
         <main>
             <div id="herosum">
-                <picture id="hero">
-                    <source srcset="images/Prestonmedium.jpg" media="(min-width: 520px) and 
-                    (max-width: 1023px)">
-                       <source srcset="images/Prestonlarge.jpg" media="(min-width: 1024px)">
-                    <img src="images/Prestonlesson7.jpg" alt="" id="primero">
-                </picture>
+                <h1 id="mist">Mistdrizzle</h1>
+                <p id="purpose">Mistdrizzle is a web application dedicated to predicting the weather in 
+                    three main places in the state of Idaho such as: Preston, Soda Spring and 
+                    Fish Haven, in addition to providing data on events that take place in 
+                    those places as well as their history and important data for the enjoyment 
+                    of visitors and residents.</p>
+                <img id="hero" src="images/clima.jpg">
             </div>
             <h1>Towns</h1>
             <div class="home"><script src="js/home.js"></script>
 
-            </div>
+            
 
         
         </main>
