--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -57,10 +57,10 @@
             <div id="Information">
                 <h2>Contact Information</h2>
                 <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <p>Website: <a id="web" href="https://midael1975.github.io/Lesson%209/homepage.html" target = "_blank">https://midael1975.github.io/Lesson%209/homepage.html</a></p>
+                <a href="https://www.instagram.com/accounts/login/?hl=es-la" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/login?lang=es" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
             <img id="contacto" src="images/mapa.png" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
