--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -62,7 +62,7 @@
                 <a href="https://twitter.com/login?lang=es" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
-            <img id="contacto" src="images/mapa.png" alt="mapa">
+            <img id="contacto" src="images/mapabarq.jpg" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
