--- a/Lesson 11/index.html
+++ b/Lesson 11/index.html
@@ -26,28 +26,29 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="https://midael1975.github.io/Lesson%2011/index.html">Home</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/preston.html">Preston</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/sodaspring.html">Soda Springs</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%2010/fishhaven.html">Fish Haven</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%208/stormcenter.html">Storm Center</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2011/Lesson%207/gallery.html">Gallery</a></li>
+              <li class="active"><a href="https://midael1975.github.io/Lesson%209/homepage.html">Home</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%2010/fishhaven.html">Fish Haven</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
             </ul>
         </nav>
 
         <main>
             <div id="herosum">
-                <picture id="hero">
-                    <source srcset="images/Prestonmedium.jpg" media="(min-width: 520px) and 
-                    (max-width: 1023px)">
-                       <source srcset="images/Prestonlarge.jpg" media="(min-width: 1024px)">
-                    <img src="images/Prestonlesson7.jpg" alt="" id="primero">
-                </picture>
+                <h1 id="mist">Mistdrizzle</h1>
+                <p id="purpose">Mistdrizzle is a web application dedicated to predicting the weather in 
+                    three main places in the state of Idaho such as: Preston, Soda Spring and 
+                    Fish Haven, in addition to providing data on events that take place in 
+                    those places as well as their history and important data for the enjoyment 
+                    of visitors and residents.</p>
+                <img id="hero" src="images/clima.jpg">
             </div>
             <h1>Towns</h1>
             <div class="home"><script src="js/home.js"></script>
 
-            </div>
+            
 
         
         </main>
@@ -56,12 +57,13 @@
             <div id="Information">
                 <h2>Contact Information</h2>
                 <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <Address>Barquisimeto, Venezuela</Address>
+                <p>Email:wjpd1905@gmail.com</p>
+                <a href="https://www.instagram.com/accounts/login/?hl=es-la" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/login?lang=es" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
-            <img id="contacto" src="images/mapa.png" alt="mapa">
+            <img id="contacto" src="images/mapabarq.jpg" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
