--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -129,7 +129,8 @@
             <div id="Information">
                 <h2>Contact Information</h2>
                 <p>Phone Number: 04145560383</p>
-                p>Email:wjpd1905@gmail.com</p>
+                <Address>Barquisimeto, Venezuela</Address>
+                <p>Email:wjpd1905@gmail.com</p>
                 <a href="https://www.instagram.com/accounts/login/?hl=es-la" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
                 <a href="https://twitter.com/login?lang=es" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>   
