--- a/Lesson 11/Lesson 10/sodaspring.html
+++ b/Lesson 11/Lesson 10/sodaspring.html
@@ -142,7 +142,7 @@
                 <p id="tres"class="parrafo">Spring brings golfing at our 18-hole course, floating and kayaking down the beautiful Bear River, as well as fishing, boating, water-skiing or just camping at our 10 reservoirs. There are three swimming resorts close by and also a new swimming pool in town.</p>
                 <p id="cuatro"class="parrafo">Winter brings the best snow and the most beautiful winter scenery. Snowmobiling and cross country skiing is great. You can travel down Mink Creek, Cub River, and even Logan Canyon and see the most beautiful winter wonderland ever, ending up at Bloomington or Bear Lake.</p>
                 <p id="cinco"class="parrafo">Preston is a vacationer’s dream. There’s always something to do.</p>  
-                    <img id="articulo"  src="images/Ciudad Preston.jpg" alt="City image">
+                    <img id="articulo1"  src="images/Ciudad Preston.jpg" alt="City image">
             </div>
             
   
