--- a/Lesson 7/gallery.html
+++ b/Lesson 7/gallery.html
@@ -76,7 +76,7 @@
 
             <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen8 large.jpg" alt="Summer Montain">
-                <figcaption>Lightning strikes the earth</figcaption>
+                <figcaption>Lightning over earth</figcaption>
             </figure>
 
             <figure class="imagen">
