--- a/Lesson 11/index.html
+++ b/Lesson 11/index.html
@@ -26,7 +26,7 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href="https://midael1975.github.io/Lesson%2011/index.html">Home</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/fishhaven.html">Fish Haven</a></li>
