--- a/Lesson 11/Lesson 8/stormcenter.html
+++ b/Lesson 11/Lesson 8/stormcenter.html
@@ -129,12 +129,13 @@
             <div id="Information">
                 <h2>Contact Information</h2>
                 <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <Address>Barquisimeto, Venezuela</Address>
+                <p>Email:wjpd1905@gmail.com</p>
+                <a href="https://www.instagram.com/accounts/login/?hl=es-la" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/login?lang=es" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>   
             </div>
-            <img id="contacto" src="images/mapa.png" alt="mapa">
+            <iframe id="contacto" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d62850.56014575282!2d-69.33803946707772!3d10.085972278650466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sve!4v1616175201912!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
