--- a/Lesson 11/Lesson 10/fishhaven.html
+++ b/Lesson 11/Lesson 10/fishhaven.html
@@ -143,11 +143,21 @@
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
-                <p id="dos" class="parrafo">The city of Preston, Idaho was founded in 1900, with a population of 5,354, sits at an elevation of 4,718ft, and has many options for the family to enjoy.</p>
-                <p id="tres"class="parrafo">Spring brings golfing at our 18-hole course, floating and kayaking down the beautiful Bear River, as well as fishing, boating, water-skiing or just camping at our 10 reservoirs. There are three swimming resorts close by and also a new swimming pool in town.</p>
-                <p id="cuatro"class="parrafo">Winter brings the best snow and the most beautiful winter scenery. Snowmobiling and cross country skiing is great. You can travel down Mink Creek, Cub River, and even Logan Canyon and see the most beautiful winter wonderland ever, ending up at Bloomington or Bear Lake.</p>
-                <p id="cinco"class="parrafo">Preston is a vacationer’s dream. There’s always something to do.</p>  
-                    <img id="articulo"  src="images/Ciudad Preston.jpg" alt="City image">
+                <p id="twop" class="parrafo">Fish Haven, originally named Rush Creek, is an 
+                    unincorporated community along the shores of Bear Lake in Bear Lake County, 
+                    Idaho, United States.</p>
+                <p id="threep"class="parrafo">An unincorporated area is a region not governed by 
+                    a local municipal corporation. Similarly, an unincorporated community is a 
+                    settlement not governed by its own local municipal corporation, but is 
+                    administered as part of larger administrative divisions.</p>
+                <p id="cuatro"class="parrafo">The first settlement at Fish Haven was made in 
+                    1864. A post office called Fish Haven was established in 1867, and 
+                    remained in operation until 1962. The community was so named because 
+                    nearby Bear Lake is a favorite fishing spot.</p>
+                <p id="cinco"class="parrafo">The town of Fish Haven is excellent for fishing 
+                    and enjoying the quiet of outdoor activities.</p>  
+                    <img id="articulo"  src="images/cityfish.jpg" alt="City image">
+            </div>
             </div>
             
   
@@ -156,13 +166,13 @@
         <footer>
             <div id="Information">
                 <h2>Contact Information</h2>
-                <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <p>Phone Number: (800) 448-2327</p>
+                <p>Website: <a id="web" href="https://bearlake.org/loc/fish-haven/" target = "_blank">https://bearlake.org/loc/fish-haven/</a></p>
+                <a href="https://www.instagram.com/visitbearlake/" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/bearlakevalley" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
+                <a href="https://www.facebook.com/BearLakeValleyCVB/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
-            <img id="contacto" src="images/mapa.png" alt="mapa">
+            <iframe id="contacto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11852.958830505346!2d-111.4048680742881!3d42.03803991735435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875415e9bdab006f%3A0xc1864ed86dd2b0e4!2sFish%20Haven%2C%20ID%2083287%2C%20USA!5e0!3m2!1sen!2sve!4v1616175962741!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
