--- a/Lesson 11/Lesson 10/preston.html
+++ b/Lesson 11/Lesson 10/preston.html
@@ -57,6 +57,9 @@
                 <p>Humidity:<span id="humidity"></span>%</p>
                
                 </section>
+                <div class="events"><script src="js/event.js"></script>
+                    <h3>Upcoming Events</h3>
+                    </div>
             </div>
             
 
