--- a/Lesson 11/Lesson 10/sodaspring.html
+++ b/Lesson 11/Lesson 10/sodaspring.html
@@ -143,11 +143,26 @@
 
             <div id="one">
                 <p id="uno" class="parrafo">by Wilker Pacheco</p>
-                <p id="dos" class="parrafo">The city of Preston, Idaho was founded in 1900, with a population of 5,354, sits at an elevation of 4,718ft, and has many options for the family to enjoy.</p>
-                <p id="tres"class="parrafo">Spring brings golfing at our 18-hole course, floating and kayaking down the beautiful Bear River, as well as fishing, boating, water-skiing or just camping at our 10 reservoirs. There are three swimming resorts close by and also a new swimming pool in town.</p>
-                <p id="cuatro"class="parrafo">Winter brings the best snow and the most beautiful winter scenery. Snowmobiling and cross country skiing is great. You can travel down Mink Creek, Cub River, and even Logan Canyon and see the most beautiful winter wonderland ever, ending up at Bloomington or Bear Lake.</p>
-                <p id="cinco"class="parrafo">Preston is a vacationer’s dream. There’s always something to do.</p>  
-                    <img id="articulo1"  src="images/Ciudad Preston.jpg" alt="City image">
+                <p id="dos" class="parrafo">Soda Springs is a beautiful community nestled in 
+                    the Rocky Mountains of Southeastern Idaho. It is well known as the 
+                    "Historical Oregon Trail Oasis."</p>
+                <p id="tres"class="parrafo">The world’s only captive geyser, it was discovered 
+                    when drilling for a swimming pool nearly 80 years ago. It is now capped and 
+                    controlled by a timer and it erupts every hour on the hour. The geyser 
+                    reaches heights of 100 feet, 365 days a year.</p>
+                <p id="cuatro"class="parrafo">Now it is let loose every hour on the hour by a 
+                    timed release valve. Its height and volume have not decreased after many
+                    years. There are viewing platforms at either end of the travertine mound 
+                    where the geyser erupts. Interpretive signs are located on the platforms 
+                    explaining this phenomenon.</p>
+                <p id="cinco"class="parrafo">Soda Springs is also the location of one of the Ground 
+                    Observer Corps sites.</p>  
+                    <picture id="articulo">
+                        <source srcset="images/Sodacity.jpg" media="(min-width: 520px) and 
+                        (max-width: 1023px)">
+                           <source srcset="images/Sodalarge.jpg" media="(min-width: 1024px)">
+                        <img src="images/Sodalarge.jpg" alt="" id="primero">
+                    </picture>
             </div>
             
   
@@ -156,11 +171,12 @@
         <footer>
             <div id="Information">
                 <h2>Contact Information</h2>
-                <p>Phone Number: 04145560383</p>
-                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
-                <img src="images/Instagram.png" width="35" alt="icon instagram">
-                <img src="images/twitter1.png" width="35" alt="icon twitter">
-                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+                <p>Phone Number: +1 208-547-2600</p>
+                <p>Website: <a id="web" href="https://www.sodaspringsid.com/" target = "_blank">https://www.sodaspringsid.com/</a></p>
+                <a href="https://www.instagram.com/explore/locations/221838718/united-states/soda-springs-idaho/?hl=en"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
+                <a href="https://twitter.com/skisodasprings?lang=en" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
+                <a href="https://www.facebook.com/sodaspringsidaho/" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+            </div> 
             </div>
             <iframe id="contacto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46943.96064637699!2d-111.62379166833858!3d42.66140751675443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8755968bb0047ae5%3A0x9d3970a1a6df8e12!2sSoda%20Springs%2C%20ID%2083276%2C%20USA!5e0!3m2!1sen!2sve!4v1616175693947!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
