--- a/Lesson 11/index.html
+++ b/Lesson 11/index.html
@@ -27,8 +27,8 @@
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2010/preston.html">Preston</a></li>
-              <li><a href="https://midael1975.github.io/Lesson%2010/sodaspring.html">Soda Springs</a></li>
+              <li><a href="Lesson 10/preston.html">Preston</a></li>
+              <li><a href="Lesson 10/sodaspring.html">Soda Springs</a></li>
               <li><a href="https://midael1975.github.io/Lesson%2010/fishhaven.html">Fish Haven</a></li>
               <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html">Storm Center</a></li>
               <li><a href="https://midael1975.github.io/Lesson%207/gallery.html">Gallery</a></li>
