--- a/Lesson 11/index.html
+++ b/Lesson 11/index.html
@@ -29,7 +29,7 @@
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="Lesson 10/preston.html">Preston</a></li>
               <li><a href="Lesson 10/sodaspring.html">Soda Springs</a></li>
-              <li><a href="Lesson 10/fishhaven1.html">Fish Haven</a></li>
+              <li><a href="Lesson 10/fishhaven.html">Fish Haven</a></li>
               <li><a href="Lesson 8/stormcenter.html">Storm Center</a></li>
               <li><a href="Lesson 7/gallery.html">Gallery</a></li>
             </ul>
