--- a/Lesson 13/directory.html
+++ b/Lesson 13/directory.html
@@ -41,6 +41,8 @@
 
     <main>
 
+        <button onclick="div.cards()">&#9638;</button>
+
         <div class="cards"><script src="js/directory.js"></script>
     
 
