--- a/Lesson 13/directory.html
+++ b/Lesson 13/directory.html
@@ -42,6 +42,7 @@
     <main>
 
         <button onclick="div.cards()">&#9638;</button>
+        <button onclick="div.cards()">&#9776;</button>
 
         <div class="cards"><script src="js/directory.js"></script>
     
