--- a/Lesson 13/Barquisimeto.html
+++ b/Lesson 13/Barquisimeto.html
@@ -23,7 +23,7 @@
         Barquisimeto
       </h2>
       <h3 id="slogan">
-        La ciudad musical de Venezuela
+        The musical city of Venezuela
       </h3>
     </header>
 
