--- a/Lesson 13/directory.html
+++ b/Lesson 13/directory.html
@@ -22,7 +22,7 @@
         Barquisimeto
       </h2>
       <h3 id="slogan">
-        La ciudad musical de Venezuela
+        The musical city of Venezuela
       </h3>
     </header>
 
