--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Chamber Commerce</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -93,27 +94,12 @@
           Purpose
         </h1>
         <p id="purpose">
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-          consequat massa quis enim. Donec pede justo, fringilla vel, aliquet
-          nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-          venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-          Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
-          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
-          vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra
-          quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-          laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-          augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam
-          rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam
-          semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc,
-          blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio
-          et ante tincidunt tempus. Donec vitae sapien ut libero venenatis
-          faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus
-          tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales
-          sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit
-          cursus nunc,
+          The chamber of commerce aims to promote competition and improve productivity in the 
+          commerce sector, within the territory of Lara state. The chamber provides support 
+          through financial aid, research, sector information and consumption statistics. 
+          At the same time it tries to establish quality norms and work standards. It also 
+          helps entrepreneurs to resolve conflicts, training, support and strengthening of 
+          companies and thus strengthen the economic activity of the state.
         </p>
         <div id="empresa">
           <div class="emp">
@@ -172,44 +158,42 @@
           </p>
 
           <p class="event2">
-            <strong>Events</strong>: Health day in commemoration of world health
-            day.<br />
-            <strong>Date:</strong> April 7 2021.<br />
-            <strong>Place:</strong> In each healthcare center of the
-            municipality
+            <strong>Events</strong>: Training opportunities for medium and small companies in 
+            times of crisis.<br />
+            <strong>Date:</strong> April 17 2021.<br />
+            <strong>Place:</strong> Hotel Jirahara
           </p>
 
           <p class="event3">
-            <strong>Events</strong>: Health day in commemoration of world health
-            day.<br />
-            <strong>Date:</strong> April 7 2021.<br />
-            <strong>Place:</strong> In each healthcare center of the
-            municipality
+            <strong>Events</strong>: Talk about the financial situation of the state and its 
+            implications for trade.<br />
+            <strong>Date:</strong> April 30 2021.<br />
+            <strong>Place:</strong> Auditorium of the Yacambu University.
           </p>
         </div>
 
         <div class="events" id="information">
           <h2>Contact Information</h2>
-          <p>Phone Number: 04145560383</p>
-          <address>Barquisimeto, Venezuela</address>
-          <p>Email:wjpd1905@gmail.com</p>
+          <p>Phone Number: (0251)251.9490</p>
+            <Address>Av. Vargas, con Esquina Carrera 24, Centro,Barquisimeto, Venezuela</Address>
+            <p>Webpage: www.camaracomerciolara.org.ve</p>
           <a
-            href="https://www.instagram.com/accounts/login/?hl=es-la"
+            href="https://www.instagram.com/camcomerciolara/?hl=en"
             target="_blank"
             ><img
-              src="https://cdn.glitch.com/94dd51d0-f670-49d8-92cb-374c27bfa1a2%2FInstagram.png?v=1616807480769"
+              src="images/Instagram.png"
               width="35"
               alt="icon instagram"
           /></a>
-          <a href="https://twitter.com/login?lang=es" target="_blank"
+          <a href="https://twitter.com/camcomerciolara" target="_blank"
             ><img
-              src="https://cdn.glitch.com/94dd51d0-f670-49d8-92cb-374c27bfa1a2%2Ftwitter1.png?v=1616807505019"
+              src="images/twitter1.png"
               width="35"
               alt="icon twitter"
           /></a>
-          <a href="https://www.facebook.com/" target="_blank"
+          <a href="https://www.facebook.com/eduardo.lind.96" target="_blank"
             ><img
-              src="https://cdn.glitch.com/94dd51d0-f670-49d8-92cb-374c27bfa1a2%2Ffacebook.png?v=1616807491796"
+              src="images/facebook.png"
               width="35"
               alt="icon facebook"
           /></a>
