--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -139,9 +139,9 @@
         <h3>
           Would you like to get a membership? click on the following link.<br />
           <a
-            href="https://midael1975.github.io/Lesson%208/stormcenter.html"
+            href="https://midael1975.github.io/Lesson%2013/join.html"
             target="_blank"
-            >https://midael1975.github.io/Lesson%208/stormcenter.html</a
+            >https://midael1975.github.io/Lesson%2013/join.html</a
           >
         </h3>
       </div>
