--- a/Lesson 13/join.html
+++ b/Lesson 13/join.html
@@ -91,7 +91,7 @@
                        
                   </fieldset>
                   
-                    <input type="submit" class="enviar" name="enviar" value="Send"><br><br>
+                    <a href=""><input type="submit" class="enviar" name="enviar" value="Send"></a><br><br>
             </form>
 
     </main>
